# OpenGL_Course

./: .getignore  README.md
Newtry1/: CMakeLists.txt
Newtry1/Glad/: CMakeLists.txt
Newtry1/Glad/include/glad/: glad.h
Newtry1/Glad/src/: glad.c
Newtry1/Headers/: camera.h  mesh.h  model.h  shader.h
Newtry1/Shaders/: Deapt_lerning.frag  Light.frag  Light.vert  Lighting.frag
Newtry1/Sources/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
build-Newtry1-Desktop_Qt_5_15_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Newtry1  build.ninja  cmake_install.cmake
build-Newtry1-Desktop_Qt_5_15_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-9439d0969cb04cc838e9.json  cmakeFiles-v1-8986bbc15842ca186340.json  codemodel-v2-d4829a4283f2106998a5.json  index-2020-10-21T14-14-14-0314.json  target-Newtry1-Debug-e654d616f2f39745ed34.json
